Save Db Coffee Product

--- a/WebProject/appsettings.json
+++ b/WebProject/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=WebProjectDB;Username=postgres;Password=54698"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
